--- a/MachineLearning/exam/cda3.ipynb
+++ b/MachineLearning/exam/cda3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<pandas.io.formats.style.Styler at 0x7fa10143bb50>",
-      "text/html": "<style  type=\"text/css\" >\n</style><table id=\"T_77656_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >id</th>        <th class=\"col_heading level0 col1\" >comment_text</th>        <th class=\"col_heading level0 col2\" >toxic</th>        <th class=\"col_heading level0 col3\" >severe_toxic</th>        <th class=\"col_heading level0 col4\" >obscene</th>        <th class=\"col_heading level0 col5\" >threat</th>        <th class=\"col_heading level0 col6\" >insult</th>        <th class=\"col_heading level0 col7\" >identity_hate</th>    </tr></thead><tbody>\n                <tr>\n                        <th id=\"T_77656_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n                        <td id=\"T_77656_row0_col0\" class=\"data row0 col0\" >0000997932d777bf</td>\n                        <td id=\"T_77656_row0_col1\" class=\"data row0 col1\" >Explanation\nWhy the edits made under my username Hardcore Metallica Fan were reverted? They weren't vandalisms, just closure on some GAs after I voted at New York Dolls FAC. And please don't remove the template from the talk page since I'm retired now.89.205.38.27</td>\n                        <td id=\"T_77656_row0_col2\" class=\"data row0 col2\" >0</td>\n                        <td id=\"T_77656_row0_col3\" class=\"data row0 col3\" >0</td>\n                        <td id=\"T_77656_row0_col4\" class=\"data row0 col4\" >0</td>\n                        <td id=\"T_77656_row0_col5\" class=\"data row0 col5\" >0</td>\n                        <td id=\"T_77656_row0_col6\" class=\"data row0 col6\" >0</td>\n                        <td id=\"T_77656_row0_col7\" class=\"data row0 col7\" >0</td>\n            </tr>\n            <tr>\n                        <th id=\"T_77656_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n                        <td id=\"T_77656_row1_col0\" class=\"data row1 col0\" >000103f0d9cfb60f</td>\n                        <td id=\"T_77656_row1_col1\" class=\"data row1 col1\" >D'aww! He matches this background colour I'm seemingly stuck with. Thanks.  (talk) 21:51, January 11, 2016 (UTC)</td>\n                        <td id=\"T_77656_row1_col2\" class=\"data row1 col2\" >0</td>\n                        <td id=\"T_77656_row1_col3\" class=\"data row1 col3\" >0</td>\n                        <td id=\"T_77656_row1_col4\" class=\"data row1 col4\" >0</td>\n                        <td id=\"T_77656_row1_col5\" class=\"data row1 col5\" >0</td>\n                        <td id=\"T_77656_row1_col6\" class=\"data row1 col6\" >0</td>\n                        <td id=\"T_77656_row1_col7\" class=\"data row1 col7\" >0</td>\n            </tr>\n            <tr>\n                        <th id=\"T_77656_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n                        <td id=\"T_77656_row2_col0\" class=\"data row2 col0\" >000113f07ec002fd</td>\n                        <td id=\"T_77656_row2_col1\" class=\"data row2 col1\" >Hey man, I'm really not trying to edit war. It's just that this guy is constantly removing relevant information and talking to me through edits instead of my talk page. He seems to care more about the formatting than the actual info.</td>\n                        <td id=\"T_77656_row2_col2\" class=\"data row2 col2\" >0</td>\n                        <td id=\"T_77656_row2_col3\" class=\"data row2 col3\" >0</td>\n                        <td id=\"T_77656_row2_col4\" class=\"data row2 col4\" >0</td>\n                        <td id=\"T_77656_row2_col5\" class=\"data row2 col5\" >0</td>\n                        <td id=\"T_77656_row2_col6\" class=\"data row2 col6\" >0</td>\n                        <td id=\"T_77656_row2_col7\" class=\"data row2 col7\" >0</td>\n            </tr>\n            <tr>\n                        <th id=\"T_77656_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n                        <td id=\"T_77656_row3_col0\" class=\"data row3 col0\" >0001b41b1c6bb37e</td>\n                        <td id=\"T_77656_row3_col1\" class=\"data row3 col1\" >\nMore\nI can't make any real suggestions on improvement - I wondered if the section statistics should be later on, or a subsection of types of accidents  -I think the references may need tidying so that they are all in the exact same format ie date format etc. I can do that later on, if no-one else does first - if you have any preferences for formatting style on references or want to do it yourself please let me know.\n\nThere appears to be a backlog on articles for review so I guess there may be a delay until a reviewer turns up. It's listed in the relevant form eg Wikipedia:Good_article_nominations#Transport</td>\n                        <td id=\"T_77656_row3_col2\" class=\"data row3 col2\" >0</td>\n                        <td id=\"T_77656_row3_col3\" class=\"data row3 col3\" >0</td>\n                        <td id=\"T_77656_row3_col4\" class=\"data row3 col4\" >0</td>\n                        <td id=\"T_77656_row3_col5\" class=\"data row3 col5\" >0</td>\n                        <td id=\"T_77656_row3_col6\" class=\"data row3 col6\" >0</td>\n                        <td id=\"T_77656_row3_col7\" class=\"data row3 col7\" >0</td>\n            </tr>\n            <tr>\n                        <th id=\"T_77656_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n                        <td id=\"T_77656_row4_col0\" class=\"data row4 col0\" >0001d958c54c6e35</td>\n                        <td id=\"T_77656_row4_col1\" class=\"data row4 col1\" >You, sir, are my hero. Any chance you remember what page that's on?</td>\n                        <td id=\"T_77656_row4_col2\" class=\"data row4 col2\" >0</td>\n                        <td id=\"T_77656_row4_col3\" class=\"data row4 col3\" >0</td>\n                        <td id=\"T_77656_row4_col4\" class=\"data row4 col4\" >0</td>\n                        <td id=\"T_77656_row4_col5\" class=\"data row4 col5\" >0</td>\n                        <td id=\"T_77656_row4_col6\" class=\"data row4 col6\" >0</td>\n                        <td id=\"T_77656_row4_col7\" class=\"data row4 col7\" >0</td>\n            </tr>\n    </tbody></table>"
+      "text/plain": "<pandas.io.formats.style.Styler at 0x7fbf18130d90>",
+      "text/html": "<style  type=\"text/css\" >\n</style><table id=\"T_4c66e_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >id</th>        <th class=\"col_heading level0 col1\" >comment_text</th>        <th class=\"col_heading level0 col2\" >toxic</th>        <th class=\"col_heading level0 col3\" >severe_toxic</th>        <th class=\"col_heading level0 col4\" >obscene</th>        <th class=\"col_heading level0 col5\" >threat</th>        <th class=\"col_heading level0 col6\" >insult</th>        <th class=\"col_heading level0 col7\" >identity_hate</th>    </tr></thead><tbody>\n                <tr>\n                        <th id=\"T_4c66e_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n                        <td id=\"T_4c66e_row0_col0\" class=\"data row0 col0\" >0000997932d777bf</td>\n                        <td id=\"T_4c66e_row0_col1\" class=\"data row0 col1\" >Explanation\nWhy the edits made under my username Hardcore Metallica Fan were reverted? They weren't vandalisms, just closure on some GAs after I voted at New York Dolls FAC. And please don't remove the template from the talk page since I'm retired now.89.205.38.27</td>\n                        <td id=\"T_4c66e_row0_col2\" class=\"data row0 col2\" >0</td>\n                        <td id=\"T_4c66e_row0_col3\" class=\"data row0 col3\" >0</td>\n                        <td id=\"T_4c66e_row0_col4\" class=\"data row0 col4\" >0</td>\n                        <td id=\"T_4c66e_row0_col5\" class=\"data row0 col5\" >0</td>\n                        <td id=\"T_4c66e_row0_col6\" class=\"data row0 col6\" >0</td>\n                        <td id=\"T_4c66e_row0_col7\" class=\"data row0 col7\" >0</td>\n            </tr>\n            <tr>\n                        <th id=\"T_4c66e_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n                        <td id=\"T_4c66e_row1_col0\" class=\"data row1 col0\" >000103f0d9cfb60f</td>\n                        <td id=\"T_4c66e_row1_col1\" class=\"data row1 col1\" >D'aww! He matches this background colour I'm seemingly stuck with. Thanks.  (talk) 21:51, January 11, 2016 (UTC)</td>\n                        <td id=\"T_4c66e_row1_col2\" class=\"data row1 col2\" >0</td>\n                        <td id=\"T_4c66e_row1_col3\" class=\"data row1 col3\" >0</td>\n                        <td id=\"T_4c66e_row1_col4\" class=\"data row1 col4\" >0</td>\n                        <td id=\"T_4c66e_row1_col5\" class=\"data row1 col5\" >0</td>\n                        <td id=\"T_4c66e_row1_col6\" class=\"data row1 col6\" >0</td>\n                        <td id=\"T_4c66e_row1_col7\" class=\"data row1 col7\" >0</td>\n            </tr>\n            <tr>\n                        <th id=\"T_4c66e_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n                        <td id=\"T_4c66e_row2_col0\" class=\"data row2 col0\" >000113f07ec002fd</td>\n                        <td id=\"T_4c66e_row2_col1\" class=\"data row2 col1\" >Hey man, I'm really not trying to edit war. It's just that this guy is constantly removing relevant information and talking to me through edits instead of my talk page. He seems to care more about the formatting than the actual info.</td>\n                        <td id=\"T_4c66e_row2_col2\" class=\"data row2 col2\" >0</td>\n                        <td id=\"T_4c66e_row2_col3\" class=\"data row2 col3\" >0</td>\n                        <td id=\"T_4c66e_row2_col4\" class=\"data row2 col4\" >0</td>\n                        <td id=\"T_4c66e_row2_col5\" class=\"data row2 col5\" >0</td>\n                        <td id=\"T_4c66e_row2_col6\" class=\"data row2 col6\" >0</td>\n                        <td id=\"T_4c66e_row2_col7\" class=\"data row2 col7\" >0</td>\n            </tr>\n            <tr>\n                        <th id=\"T_4c66e_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n                        <td id=\"T_4c66e_row3_col0\" class=\"data row3 col0\" >0001b41b1c6bb37e</td>\n                        <td id=\"T_4c66e_row3_col1\" class=\"data row3 col1\" >\nMore\nI can't make any real suggestions on improvement - I wondered if the section statistics should be later on, or a subsection of types of accidents  -I think the references may need tidying so that they are all in the exact same format ie date format etc. I can do that later on, if no-one else does first - if you have any preferences for formatting style on references or want to do it yourself please let me know.\n\nThere appears to be a backlog on articles for review so I guess there may be a delay until a reviewer turns up. It's listed in the relevant form eg Wikipedia:Good_article_nominations#Transport</td>\n                        <td id=\"T_4c66e_row3_col2\" class=\"data row3 col2\" >0</td>\n                        <td id=\"T_4c66e_row3_col3\" class=\"data row3 col3\" >0</td>\n                        <td id=\"T_4c66e_row3_col4\" class=\"data row3 col4\" >0</td>\n                        <td id=\"T_4c66e_row3_col5\" class=\"data row3 col5\" >0</td>\n                        <td id=\"T_4c66e_row3_col6\" class=\"data row3 col6\" >0</td>\n                        <td id=\"T_4c66e_row3_col7\" class=\"data row3 col7\" >0</td>\n            </tr>\n            <tr>\n                        <th id=\"T_4c66e_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n                        <td id=\"T_4c66e_row4_col0\" class=\"data row4 col0\" >0001d958c54c6e35</td>\n                        <td id=\"T_4c66e_row4_col1\" class=\"data row4 col1\" >You, sir, are my hero. Any chance you remember what page that's on?</td>\n                        <td id=\"T_4c66e_row4_col2\" class=\"data row4 col2\" >0</td>\n                        <td id=\"T_4c66e_row4_col3\" class=\"data row4 col3\" >0</td>\n                        <td id=\"T_4c66e_row4_col4\" class=\"data row4 col4\" >0</td>\n                        <td id=\"T_4c66e_row4_col5\" class=\"data row4 col5\" >0</td>\n                        <td id=\"T_4c66e_row4_col6\" class=\"data row4 col6\" >0</td>\n                        <td id=\"T_4c66e_row4_col7\" class=\"data row4 col7\" >0</td>\n            </tr>\n    </tbody></table>"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,24 +157,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-2-7f50649b6b60>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0msklearn\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfeature_selection\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mSelectKBest\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mkbest\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mSelectKBest\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mk\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m10000\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0mtrain_selected\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mkbest\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfit\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mkbest\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtrain\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'toxic'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      4\u001B[0m \u001B[0mtrain_selected\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'train' is not defined"
-     ]
+     "data": {
+      "text/plain": "<127657x10000 sparse matrix of type '<class 'numpy.float64'>'\n\twith 63184985 stored elements in Compressed Sparse Row format>"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.feature_selection import SelectKBest\n",
     "kbest = SelectKBest(k=10000)\n",
-    "train_selected = kbest.fit(kbest, train['toxic'])\n",
+    "train_selected = kbest.fit_transform(train_tezhen, train['toxic'])\n",
     "train_selected\n"
    ],
    "metadata": {
@@ -186,26 +183,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "train_target = train['toxic']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(train_tezhen, train_target, test_size=0.3, random_state=112)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(train_selected, train_target, test_size=0.3, random_state=112)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "toxic-训练集F1值:0.9136665501572876\n",
-      "toxic-验证集F1值:0.7879541373117835\n"
+      "toxic-训练集F1值:0.8400568492401881\n",
+      "toxic-验证集F1值:0.7748047625144029\n"
      ]
     }
    ],
@@ -218,8 +215,8 @@
     "classifier.fit(X_over, y_over)\n",
     "train_pred_toxic = classifier.predict(X_train)\n",
     "test_pred_toxic = classifier.predict(X_test)\n",
-    "predict_toxic_0 = classifier.predict(test_tezhen)\n",
-    "predict_toxic=pd.DataFrame(predict_toxic_0,columns=['toxic'])\n",
+    "# predict_toxic_0 = classifier.predict(test_tezhen)\n",
+    "# predict_toxic=pd.DataFrame(predict_toxic_0,columns=['toxic'])\n",
     "\n",
     "from sklearn.metrics import f1_score\n",
     "print('toxic-训练集F1值:%s'%f1_score(train_pred_toxic,y_train))\n",
@@ -228,21 +225,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "severe_toxic-训练集F1值:0.724588781105019\n",
-      "severe_toxic-验证集F1值:0.4995391705069124\n"
+      "severe_toxic-训练集F1值:0.6258652094717669\n",
+      "severe_toxic-验证集F1值:0.4951298701298701\n"
      ]
     }
    ],
    "source": [
+    "kbest = SelectKBest(k=10000)\n",
+    "train_selected = kbest.fit_transform(train_tezhen, train['severe_toxic'])\n",
+    "\n",
     "train_target = train['severe_toxic']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(train_tezhen, train_target, test_size=0.3, random_state=112)#random113\n",
+    "X_train, X_test, y_train, y_test = train_test_split(train_selected, train_target, test_size=0.3, random_state=112)#random113\n",
     "\n",
     "smote = SMOTE()\n",
     "X_over, y_over = smote.fit_resample(X_train, y_train)\n",
@@ -251,8 +251,8 @@
     "train_pred_severe_toxic = classifier.predict(X_train)\n",
     "test_pred_severe_toxic = classifier.predict(X_test)\n",
     "\n",
-    "predict_severe_toxic_0 = classifier.predict(test_tezhen)\n",
-    "predict_severe_toxic=pd.DataFrame(predict_severe_toxic_0,columns=['severe_toxic'])\n",
+    "# predict_severe_toxic_0 = classifier.predict(test_tezhen)\n",
+    "# predict_severe_toxic=pd.DataFrame(predict_severe_toxic_0,columns=['severe_toxic'])\n",
     "\n",
     "print('severe_toxic-训练集F1值:%s'%f1_score(train_pred_severe_toxic,y_train))\n",
     "print('severe_toxic-验证集F1值:%s'%f1_score(test_pred_severe_toxic,y_test))"
